@@ -6,8 +6,6 @@ import java.util.EventObject;
  * @author emilio acciaro on 24/01/16.
  */
 public class RequestEvent extends EventObject{
-    private static final long serialVersionUID = 1L;
-
     private String address;
     private String name;
     private int indexOfClient;
@@ -16,9 +14,11 @@ public class RequestEvent extends EventObject{
     RequestEvent(Object e){
         super(e);
     }
+
     void setAddress(String address){
         this.address = address;
     }
+
     void setName(String name){
         this.name = name;
     }
