@@ -38,5 +38,6 @@ e la classe che si occupa della gestione delle richieste dei varei thread
 -Creazione di log per ogni esecuzione
 -miglioramenti vari
 -bug fix
+-added java documentation for StreamSocket, Server and Client classes
 
 
